# gsoc26-kubeflow-sparkclient-poc

./: .gitignore  README.md  demo.py  fetch_crd_schema.py  generate.sh  pyproject.toml  requirements.txt
api/: spark_client.py
backends/: base.py
backends/kubernetes/: backend.py  options.py  utils.py
kubeflow_spark_api/: __init__.py
kubeflow_spark_api/models/: __init__.py  generated_models.py  io_k8s_apimachinery_pkg_apis_meta_v1_object_meta.py  sparkoperator_v1beta2_driver_spec.py  sparkoperator_v1beta2_executor_spec.py  sparkoperator_v1beta2_spark_application.py  sparkoperator_v1beta2_spark_application_spec.py
schemas/: spark_application_schema.json  sparkoperator_crd.yaml
scripts/: fetch_crd_schema.py  generate_models.py
tests/: expected_payload.json  test_serialization.py
